# moneyball

./: .gitignore  README.md  constraints.txt  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: pick_calibration_points.py  prepare_ball_dataset.py  preview_ball_dataset.py
soccer_cv/: __init__.py  cli.py  config.py  logging_utils.py  pipeline.py  render.py  types.py
soccer_cv/detectors/: yolo.py
soccer_cv/field/: homography.py
soccer_cv/metrics/: ball_fallback.py  base.py  field_metrics.py  possession.py  possession_stats.py  team_assignment.py
soccer_cv/trackers/: bytetrack.py
soccer_cv/utils/: masking.py  outputs.py  video_io.py
soccer_cv/viz/: annotate.py  minimap.py
